# MusicBox

./: .gitignore  CMakeLists.txt  CMakePresets.json
App/: App.7z  AppMain.cpp  AppUI.cpp  AppUI.h  BSpline.cpp  BSpline.h  CMakeLists.txt  ColorGenerator.cpp  ColorGenerator.h  ConsoleApplication1.cpp  MainUI.cpp  MainUI.h  MiniAppUI.cpp  MiniAppUI.h  Player.cpp  Player.h  RenderingThread.cpp  RenderingThread.h  RoundedWindow.cpp  RoundedWindow.h  SceneManager.cpp  SceneManager.h  SongListUI.cpp  SongListUI.h  SoundBox.cpp  SoundBox.h  SoundWave.cpp  SoundWave.h  SpectumTimer.cpp  SpectumTimer.h  testRoundPanel.cpp1  testRoundPanel.h1
